[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
dotenvy = "0.15.7"
http-body = "1.0.0"
hyper = { version = "0.14.27", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "any", "runtime-tokio-rustls"] }

thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator = { version = "0.16.1", features = ["derive"] }

[features]
default = ["db-test"]
db-test = []
