[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
hyper = { version = "1.5.1", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.9.0", features = ["postgres", "any", "runtime-tokio-rustls"] }

thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.19.0", features = ["derive"] }

[features]
default = ["db-test"]
db-test = []
